# face

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  package-lock.json  package.json  pyproject.toml  replit.md
backend/: .env  .env.example  package-lock.json  package.json  server.js
backend/config/: db.js
backend/controllers/: attendanceController.js  authController.js  botController.js  employeeController.js  faceDetectionController.js  leadController.js  payslipController.js  taskController.js
backend/middleware/: authMiddleware.js  authSocket.js  departmentAccess.js  faceValidation.js
backend/models/: Attendance.js  Employee.js  FaceData.js  Lead.js  Leave.js  PurchaseOrder.js  Task.js  User.js
backend/routes/: attendanceRoutes.js  authRoutes.js  botRoutes.js  employeeRoutes.js  faceDetectionRoutes.js  leadRoutes.js  messageRoutes.js  payslipRoutes.js  problemRoutes.js  taskRoutes.js
backend/scripts/: seedAdmin.js
backend/services/: emailService.js  faceRecognitionService.js  taskSchedulerService.js
backend/socket/: chat.js
backend/utils/: email.js  shutdown.js
face_service/: main.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/public/: test-face-api.html
frontend/src/: App.jsx  index.css
frontend/src/api/: axios.js  index.js
frontend/src/context/: EmployeeContext.jsx
frontend/src/hooks/: useDashboardData.js
frontend/src/routes/: ProtectedRoute.jsx
frontend/src/services/: api.js  authService.js  taskService.js
frontend/src/utils/: api.js  attendanceAPI.js  config.js  departmentAccess.js  faceAPI.js
(+33 files in other folders)
